# management-system

./:  oca_dependencies.txt   .codeclimate.yml  .copier-answers.yml  .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .pylintrc-mandatory  .travis.yml  README.md  oca-dependencies.txt  oca_dependencies.txt  project.config  test-requirements.txt
document_page/: README.rst  __init__.py  __manifest__.py
document_page_environment_manual/: README.rst  __init__.py  __manifest__.py  __openerp__.py  document_page_environment_manual.xml
document_page_environmental_aspect/: README.rst  __init__.py  __manifest__.py  __openerp__.py  document_page_environmental_aspect.xml
document_page_health_safety_manual/: README.rst  __init__.py  __manifest__.py  __openerp__.py  document_page_health_safety_manual.xml
document_page_procedure/: README.rst  __init__.py  __manifest__.py  __manifest___BASE_1415.py  __manifest___REMOTE_1415.py  __openerp__.py  document_page_procedure.xml
document_page_process/: README.rst  __manifest__.py
document_page_quality_manual/: README.rst  __init__.py  __manifest__.py  __openerp__.py  document_page_quality_manual.xml
document_page_work_instruction/: README.rst  __init__.py  __manifest__.py  __manifest___REMOTE_1553.py  __openerp__.py
document_page_work_instructions/: README.rst  __manifest__.py  __openerp__.py  document_page_work_instructions.xml
information_security_manual/: README.rst  __openerp__.py
knowledge/: README.rst  __init__.py  __manifest__.py
mgmtsystem/: README.rst  __init__.py  __manifest__.py  __openerp__.py  board_mgmtsystem_view.xml  menus.xml  mgmtsystem.xml  mgmtsystem_system.py  mgmtsystem_system.xml  readme.md
mgmtsystem_action/: README.rst  __init__.py  __manifest__.py  __openerp__.py  action_sequence.xml  board_mgmtsystem_action.xml  demo_action.xml  mgmtsystem_action.py  mgmtsystem_action.xml  mgmtsystem_action_stage.py  mgmtsystem_action_workflow.xml  mgmtsystem_claim_stage.xml  workflow_mgmtsystem_action.xml
mgmtsystem_action_audittrail/: __manifest__.py  __openerp__.py  mgmtsystem_action.xml
mgmtsystem_action_claim/: README.rst  __manifest__.py
mgmtsystem_action_create_date/: __manifest__.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+2461 files in other folders)
