[project]
name = "odoo-addons-oca-management-system"
version = "17.0.20240422.0"
dependencies = [
    "odoo-addon-document_page_procedure>=17.0dev,<17.1dev",
    "odoo-addon-mgmtsystem>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
